--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@discordjs/voice": "^0.17.0",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
+    "ffmpeg-static": "^5.2.0",
+    "libsodium-wrappers": "^0.7.13",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
