chore: add git hooks

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,11 @@
 {
   "semi": true,
-  "tabWidth": 2,
   "singleQuote": true,
-  "endOfLine": "auto"
+  "trailingComma": "all",
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
