--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,32 +2,36 @@ name: deploy
 
 on:
   push:
-    tags:
-      - '*'
+    branches: [ master ]
 
 jobs:
-  init:
+  build-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 20.x.x
-          cache: yarn
-      - run: yarn
-  deploy:
-    needs: init
-    runs-on: ubuntu-latest
-    concurrency:
-      group: deploy
-      cancel-in-progress: true
-    steps:
-      - name: SSH Command
-        uses: D3rHase/ssh-command-action@v0.2.2
-        with:
-          # hostname / IP of the server
-          host: ${{ secrets.STAGING_SSH_HOST }}
-          user: ${{ secrets.STAGING_SSH_USERNAME }}
-          private_key: ${{ secrets.STAGING_SSH_PRIVATE_KEY }}
-          host_fingerprint: ${{ secrets.STAGING_SSH_FINGERPRINT }}
-          command: source ~/.nvm/nvm.sh; ~/skuf-bot/deploy.sh
+    - name: Checkout repo
+      uses: actions/checkout@v3
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 20.x.x
+
+    - name: Install dependencies
+      run: yarn
+
+    - name: Build project
+      run: yarn build
+
+    - name: Deploy via SSH
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        script: |
+          cd ~/projects/skuf-bot
+          git pull origin master
+          yarn
+          yarn build
+          pm2-restart
